# tome

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
scripts/: build_tld_seed.py
tome-api/: pyproject.toml
tome-api/tome_api/: main.py
tome-api/tome_api/mcp/: server.py
tome-api/tome_api/routers/: glossary.py  records.py  tlds.py
tome-cli/: Cargo.toml
tome-cli/src/: main.rs
tome-core/: Cargo.toml
tome-core/schema/: tld_schema.sql
tome-core/src/: db.rs  error.rs  glossary.rs  lib.rs  logging.rs  output.rs  record_type.rs  seed.rs  seed_extended.rs  tld.rs
tome-core/src/db/: mod.rs  queries.rs  schema.rs  seed.rs
tome-py/: Cargo.toml  pyproject.toml
tome-py/python/tome/: __init__.py
tome-py/src/: bridge.rs  lib.rs
