[workspace]
members = ["tome-core", "tome-cli", "tome-py"]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"

[workspace.lints.rust]
unsafe_code = "warn"
unused_qualifications = "warn"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zac Roach"]
license = "MIT"
repository = "https://github.com/TheZacillac/tome"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
comfy-table = "7"
crossterm = "0.28"

# Python bindings
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.35", features = ["bundled"] }
toml = "0.8"
