[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tome-api"
version = "0.1.0"
description = "REST API and MCP server for Tome — a reference database for internet TLDs, DNS record types, and domain name terminology"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Zac Roach" }]
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "mcp>=1.0",
    "tome>=0.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.26"]

[project.scripts]
tome-api = "tome_api.main:run"
tome-mcp = "tome_api.mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["tome_api"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["tome_api", "tome"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
