[package]
name = "tome-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Tome — a reference database for internet TLDs, DNS record types, and domain name terminology"

[lib]
name = "_tome"
crate-type = ["cdylib"]

[dependencies]
tome-core = { version = "0.1.0", path = "../tome-core" }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
