[package]
name = "tome-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Tome — a reference database for internet TLDs, DNS record types, and domain name terminology"

[lib]
name = "_tome"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
abi3-py39 = ["pyo3/abi3-py39"]

[dependencies]
tome-core = { version = "0.1.0", path = "../tome-core" }
pyo3 = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }
log = "0.4"
pyo3-log = "0.12"

[lints]
workspace = true
