[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "tome"
version = "0.1.0"
description = "A reference database for internet TLDs, DNS record types, and domain name terminology"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Zac Roach" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.maturin]
features = ["extension-module", "abi3-py39"]
python-source = "python"
module-name = "tome._tome"
